--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -10,16 +10,11 @@ $imagesPath: "../../images";
   }
 
   .c-gallery{
-    .row{
-      place-content: center;
-    }
+
     h4{
       margin-top: 20px;
     }
-    img{
-      width: 65%;
-      padding-top: 20px;
-    }
+
   }
 
   .c-service{
@@ -53,6 +48,40 @@ $imagesPath: "../../images";
       background-color: $primary;
     }
   }
+
+
+  .crr-center {
+    padding-top: 20px;
+    margin: 0 50%;
+    transform: translateX(-50%);
+  }
+
+  .carousel {
+    position: inherit !important;
+
+    .carousel-indicators {
+      position: inherit !important;
+
+    }
+
+    .carousel-indicators {
+      li{
+        width: auto !important;
+        height: auto !important;
+        padding: 5px  8px !important;
+        text-indent: 0 !important;
+        background: transparent !important;
+        border: 1px solid $primary !important;
+        border-radius: 4px;
+        opacity: 1 !important;
+        &.active{
+          background-color: $primary !important;
+        }
+      }
+    }
+
+  }
+
 }
 
 #about > div > div {
